Fixed Markdown scrollbar being always visible

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -16,6 +16,6 @@ label {
 // }
 
 .badges-source {
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: visible;
 }
